moon/src/parser.c
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#include "ast.h"
#include "error.h"
#include "memory.h"
#include "object.h"
#include "parser.h"
#include "scanner.h"
#include "sigtrie.h"
#include "vm.h"

#include "lib_core.h"
#include "lib_io.h"
#include "lib_list.h"
#include "lib_math.h"
#include "lib_string.h"

// ==========================================
// 1. GLOBAL STATE & REGISTRY
// ==========================================

Parser parser;

// --- THE BLINDFOLD STATE ---
typedef struct {
  uint32_t hash;
  int depth;
} ExpectedLabel;

static ExpectedLabel expectedLabelStack[256];
static int expectedLabelCount = 0;
static int groupingDepth = 0; // Tracks if we are inside () or []
static Node *currentStickySubject = NULL;
static int loopingDepth = 0;

// --- ADD THESE TWO LINES ---
static int parseDepth = 0;
#define MAX_AST_DEPTH 1024
// ---------------------------

static bool isExpectedLabel() {
  if (expectedLabelCount == 0)
    return false;

  // Hash the current token
  uint32_t currentHash =
      hashString(parser.current.start, parser.current.length);

  // Check if it matches an expected label AT THE CURRENT DEPTH
  for (int i = 0; i < expectedLabelCount; i++) {
    if (expectedLabelStack[i].hash == currentHash &&
        expectedLabelStack[i].depth == groupingDepth) {
      return true;
    }
  }
  return false;
}
// ---------------------------

static char *my_strdup(const char *s) {
  size_t len = strlen(s) + 1;
  char *dup = malloc(len);
  if (dup)
    memcpy(dup, s, len);
  return dup;
}

// --------------------------------------

// You will need to expose your readFile helper from main.c or rewrite a quick
// one here
extern char *readFile(const char *path);

static bool canStartExpression(TokenType type) {
  switch (type) {
  case TOKEN_NEWLINE:
  case TOKEN_EOF:
  case TOKEN_RIGHT_PAREN:
  case TOKEN_RIGHT_BRACKET:
  case TOKEN_RIGHT_BRACE:
  case TOKEN_COMMA:
  case TOKEN_COLON:
  case TOKEN_ELSE:
  case TOKEN_BE:
  case TOKEN_TO:
  case TOKEN_IF:
  case TOKEN_UNLESS:
  case TOKEN_THEN:
  case TOKEN_BY:
    return false;
  default:
    return true;
  }
}

bool isMathOperator(Token opToken) {
  switch (opToken.type) {
  case TOKEN_PLUS:
  case TOKEN_MINUS:
  case TOKEN_STAR:
  case TOKEN_SLASH:
  case TOKEN_MOD:
    return true;
  default:
    return false;
  }
}



// ==========================================
// 3. ERROR HANDLING
// ==========================================

void errorAt(Token *token, ErrorType type, const char *message,
             const char *hint) {
  if (parser.panicMode)
    return;
  parser.panicMode = true;
  reportCompileError(token, type, message, hint);
  parser.hadError = true;
}

// Legacy fallback for the Emitter
void error(const char *message) {
  errorAt(&parser.previous, ERR_SYNTAX, message, NULL);
}

void consumeHint(TokenType type, ErrorType errType, const char *message,
                 const char *hint) {
  if (parser.current.type == type) {
    advance();
    return;
  }
  errorAt(&parser.current, errType, message, hint);
}

// --- THE EMPATHETIC BLOCK CLOSER ---
static void consumeBlockEnd(Token opener, const char *blockName) {
  if (check(TOKEN_END)) {
    advance();
    return;
  }

  char message[256];
  snprintf(message, sizeof(message),
           "I couldn't find the 'end' keyword for this %s block.", blockName);

  errorAt(&opener, ERR_SYNTAX, message,
          "Control flow blocks, functions, and types must be closed with the "
          "'end' keyword. "
          "Look at the line I highlighted above to see exactly where this "
          "block started.");
}

// Legacy fallback
void consume(TokenType type, const char *message) {
  consumeHint(type, ERR_SYNTAX, message, NULL);
}

void synchronize() {
  parser.panicMode = false;

  while (parser.current.type != TOKEN_EOF) {
    if (parser.previous.type == TOKEN_END)
      return;
    switch (parser.current.type) {
    case TOKEN_LET:
    case TOKEN_IF:
    case TOKEN_WHILE:
    case TOKEN_GIVE:
    case TOKEN_SET:
      return;
    default:;
    }
    advance();
  }
}

// ==========================================
// 4. LOW-LEVEL PARSING (Token Control)
// ==========================================

void advance() {
  parser.previous = parser.current;
  for (;;) {
    parser.current = scanToken();
    if (parser.current.type != TOKEN_ERROR)
      break;

    errorAt(&parser.current, ERR_SYNTAX, parser.current.start, NULL);
  }
}

bool check(TokenType type) { return parser.current.type == type; }

bool match(TokenType type) {
  if (!check(type))
    return false;

  advance();
  return true;
}

bool checkTerminator(TokenType *terminators, int count) {
  for (int i = 0; i < count; i++) {
    if (check(terminators[i]))
      return true;
  }
  return check(TOKEN_EOF);
}

void ignoreNewlines() {
  while (match(TOKEN_NEWLINE))
    ;
}

// ==========================================
// 5. PRATT ENGINE & EXPRESSIONS
// ==========================================

typedef enum {
  PREC_NONE,
  PREC_ASSIGNMENT,
  PREC_RANGE,
  PREC_OR,
  PREC_AND,
  PREC_EQUALITY,
  PREC_COMPARISON,
  PREC_TERM,
  PREC_FACTOR,
  PREC_CAST,
  PREC_UNARY,
  PREC_CALL,
  PREC_PRIMARY
} Precedence;

typedef Node *(*PrefixFn)();
typedef Node *(*InfixFn)(Node *left);
typedef struct {
  PrefixFn prefix;
  InfixFn infix;
  Precedence precedence;
} ParseRule;

static Node *expression();
static ParseRule *getRule(TokenType type);

static Node *parsePrecedence(Precedence precedence) {
  // 1. Tracks recursive depth (Right-heavy trees)
  parseDepth++;
  if (parseDepth > MAX_AST_DEPTH) {
    error("Expression is too complex or deeply nested. Break it up.");
    parseDepth--;
    return NULL;
  }

  advance();

  PrefixFn prefixRule = getRule(parser.previous.type)->prefix;

  if (prefixRule == NULL) {
    errorAt(&parser.previous, ERR_SYNTAX, "I was expecting an expression here.",
            "An expression evaluates to a value (like a number, a string, or "
            "math). Did you leave a trailing operator?");
    parseDepth--; // Prevent depth leak on error!
    return NULL;
  }

  Node *leftNode = prefixRule();

  // 2. Tracks while-loop depth (Left-heavy trees!)
  int infixDepth = 0;

  while (precedence <= getRule(parser.current.type)->precedence) {
    if (isExpectedLabel())
      break;

    // --- CATCH THE BOMB ---
    infixDepth++;
    if (parseDepth + infixDepth > MAX_AST_DEPTH) {
      error(
          "This expression is too long. Please break it into multiple lines.");
      break;
    }
    // ----------------------

    advance();
    InfixFn infixRule = getRule(parser.previous.type)->infix;
    leftNode = infixRule(leftNode);
  }

  parseDepth--;
  return leftNode;
}

static Node *expression() {
  Node *expr = parsePrecedence(PREC_ASSIGNMENT);

  // Is it a Ternary or a Modifier?
  if (match(TOKEN_IF)) {
    int line = parser.previous.line;
    Node *cond = expression(); // Parse the condition

    if (match(TOKEN_ELSE)) {
      // It has an 'else'! It's a standard Ternary Expression.
      Node *elseBranch = expression();
      return newIfNode(cond, expr, elseBranch, line);
    } else {
      // No 'else'! It's a Statement Modifier. We return it with a NULL
      // elseBranch so the parent statement can invert it.
      return newIfNode(cond, expr, NULL, line);
    }
  } else if (match(TOKEN_UNLESS)) {
    int line = parser.previous.line;
    Node *cond = expression();

    // Invert the condition for 'unless'
    Token notToken = {TOKEN_NOT, "not", 3, line, 0};
    cond = newUnaryNode(notToken, cond, line);

    if (match(TOKEN_THEN)) {
      Node *elseBranch = expression();
      return newIfNode(cond, expr, elseBranch, line);
    } else {
      // Statement Modifier
      return newIfNode(cond, expr, NULL, line);
    }
  }

  return expr;
}

static Node *string() {
  // Use copyStringUnescaped, and chop off 1 pipe from front and back (+1, -2)
  ObjString *str = copyStringUnescaped(parser.previous.start + 1,
                                       parser.previous.length - 2);
  return newLiteralNode(OBJ_VAL(str), parser.previous.line);
}

static Node *extractInterpolationString(Token token) {
  // Use copyStringUnescaped, and chop off 1 pipe/backtick from front and back
  // (+1, -2)
  ObjString *str = copyStringUnescaped(token.start + 1, token.length - 2);
  return newLiteralNode(OBJ_VAL(str), token.line);
}

// The Interpolation Parser
static Node *interpolation() {
  int line = parser.previous.line;
  NodeArray parts;
  initNodeArray(&parts);

  // 1. The Opening String ("hello `)
  writeNodeArray(&parts, extractInterpolationString(parser.previous));

  // 2. The Loop
  while (true) {
    // Parse the expression inside the backticks ( x + y )
    writeNodeArray(&parts, expression());

    // It MUST be followed by a MIDDLE or a CLOSE token
    if (match(TOKEN_STRING_MIDDLE)) {
      writeNodeArray(&parts, extractInterpolationString(parser.previous));
    } else if (match(TOKEN_STRING_CLOSE)) {
      writeNodeArray(&parts, extractInterpolationString(parser.previous));
      break;
    } else {
      errorAt(
          &parser.current, ERR_SYNTAX,
          "I was expecting the end of the string interpolation here.",
          "Make sure to close your interpolation block with another backtick "
          "(`) or end the string with a double quote (\")");
      break;
    }
  }

  Node *node = newInterpolationNode(parts.items, parts.count, line);
  freeNodeArray(&parts);
  return node;
}

static Node *number() {
  double value = strtod(parser.previous.start, NULL);
  return newLiteralNode(NUMBER_VAL(value), parser.previous.line);
}

static Node *literal() {
  int line = parser.previous.line;
  switch (parser.previous.type) {
  case TOKEN_FALSE:
    return newLiteralNode(BOOL_VAL(false), line);
  case TOKEN_TRUE:
    return newLiteralNode(BOOL_VAL(true), line);
  case TOKEN_NIL:
    return newLiteralNode(NIL_VAL, line);
  default:
    return NULL;
  }
}

static Node *variable() {
  Token rootToken = parser.previous;

  // --- THE LEXICAL SHIELD ---
  // If the variable starts with '__', it's a VM intrinsic.
  if (rootToken.length >= 2 && rootToken.start[0] == '_' &&
      rootToken.start[1] == '_') {
    // If the core is already done booting, the user is typing this! Reject it.
    if (isCoreBootstrapped) {
      errorAt(&parser.previous, ERR_SYNTAX,
              "You may not use identifiers starting with '__'.",
              "This prefix is strictly reserved for internal MOON engine "
              "primitives.. so piss off..");
      return newVariableNode(rootToken,
                             rootToken.line); // Return safe dummy node
    }
  }
  // --------------------------

  char rootWord[256] = {0};
  snprintf(rootWord, sizeof(rootWord), "%.*s", rootToken.length,
           rootToken.start);

  TrieNode *currentNode = getSignatureTrie(rootWord);

  if (currentNode == NULL) {
    return newVariableNode(rootToken, rootToken.line);
  }

  // Use dynamic array for accumulated arguments
  NodeArray args;
  initNodeArray(&args);

  TrieNode *startNode = currentNode;
  TrieNode *lastGoodState = currentNode->isTerminal ? currentNode : NULL;

  while (currentNode->childCount > 0) {
    uint32_t nextHash = hashString(parser.current.start, parser.current.length);
    TrieNode *matchedLabel = NULL;
    bool expectsArgument = false;

    for (int i = 0; i < currentNode->childCount; i++) {
      TrieNode *child = currentNode->children[i];
      if (child->type == NODE_LABEL && child->labelHash == nextHash) {
        matchedLabel = child;
      } else if (child->type == NODE_ARGUMENT) {
        expectsArgument = true;
      }
    }

    if (matchedLabel != NULL) {
      advance();
      currentNode = matchedLabel;
      if (currentNode->isTerminal)
        lastGoodState = currentNode;
      continue;
    }

    if (expectsArgument && canStartExpression(parser.current.type)) {
      int labelsPushed = 0;
      for (int i = 0; i < currentNode->childCount; i++) {
        if (currentNode->children[i]->type == NODE_ARGUMENT) {
          TrieNode *ac = currentNode->children[i];
          for (int j = 0; j < ac->childCount; j++) {
            if (ac->children[j]->type == NODE_LABEL) {
              expectedLabelStack[expectedLabelCount].hash =
                  ac->children[j]->labelHash;
              expectedLabelStack[expectedLabelCount].depth = groupingDepth;
              expectedLabelCount++;
              labelsPushed++;
            }
          }
        }
      }

      // Initialize temp array INSIDE the loop
      NodeArray tempArgs;
      initNodeArray(&tempArgs);

      if (check(TOKEN_LEFT_PAREN)) {
        advance();
        groupingDepth++;

        if (!check(TOKEN_RIGHT_PAREN)) {
          do {
            writeNodeArray(&tempArgs, expression());
          } while (match(TOKEN_COMMA));
        }
        consume(TOKEN_RIGHT_PAREN, "Expect ')' after arguments.");
        groupingDepth--;
      } else {
        writeNodeArray(&tempArgs, expression());
      }

      expectedLabelCount -= labelsPushed;

      TrieNode *matchedArgChild = NULL;
      for (int i = 0; i < currentNode->childCount; i++) {
        if (currentNode->children[i]->type == NODE_ARGUMENT &&
            currentNode->children[i]->arity == tempArgs.count) {
          matchedArgChild = currentNode->children[i];
          break;
        }
      }

      if (matchedArgChild != NULL) {
        // Transfer contents
        for (int i = 0; i < tempArgs.count; i++)
          writeNodeArray(&args, tempArgs.items[i]);

        freeNodeArray(&tempArgs); // Free the temp buffer before looping!

        currentNode = matchedArgChild;
        if (currentNode->isTerminal)
          lastGoodState = currentNode;
        continue;
      } else {
        // --- THE PATCH 1 ---
        // We hit a dead end. Destroy the orphaned argument nodes!
        for (int i = 0; i < tempArgs.count; i++)
          freeNode(tempArgs.items[i]);

        freeNodeArray(&tempArgs); // Free on dead end!
        break;
      }
    }
    break;
  }

  if (lastGoodState != NULL) {
    if (currentNode != lastGoodState) {
      errorAt(&parser.previous, ERR_SYNTAX,
              "This phrasal function looks incomplete.",
              "You started a phrase but didn't finish it. Check the function's "
              "signature to see what words or arguments are missing.");
      for (int i = 0; i < args.count; i++)
        freeNode(args.items[i]);
      freeNodeArray(&args);
      return newVariableNode(rootToken, rootToken.line);
    }

    Token mangledToken = rootToken;
    mangledToken.start = my_strdup(lastGoodState->mangledName);
    mangledToken.length = strlen(lastGoodState->mangledName);

    Node *node = newPhrasalCallNode(mangledToken, args.items, args.count,
                                    rootToken.line);
    freeNodeArray(&args);
    return node;
  }

  if (currentNode != startNode) {
    errorAt(
        &parser.previous, ERR_REFERENCE,
        "I don't recognize this phrasal function.",
        "Did you misspell a word, or forget to define this function earlier?");
  }
  for (int i = 0; i < args.count; i++)
    freeNode(args.items[i]);

  freeNodeArray(&args);
  return newVariableNode(rootToken, rootToken.line);
}

static Node *explicitSticky() {
  Node *right = parsePrecedence(PREC_UNARY);
  currentStickySubject = right; // Lock it into the register!
  return right; // Act transparently, passing the value right through
}

static Node *unary() {
  Token opToken = parser.previous;
  Node *right = parsePrecedence(PREC_UNARY);
  return newUnaryNode(opToken, right, opToken.line);
}

// Safely clones an AST node so we don't double-free memory!
static Node *cloneNode(Node *original) {
  if (!original)
    return NULL;

  switch (original->type) {
  case NODE_VARIABLE:
    return newVariableNode(original->as.variable.name, original->line);
  case NODE_LITERAL:
    return newLiteralNode(original->as.literal.value, original->line);
  case NODE_PROPERTY:
    return newPropertyNode(cloneNode(original->as.property.target),
                           original->as.property.name, original->line);
  case NODE_SUBSCRIPT:
    return newSubscriptNode(cloneNode(original->as.subscript.left),
                            cloneNode(original->as.subscript.index),
                            original->line);
  default:
    errorAt(&parser.previous, ERR_SYNTAX,
            "I can't use a complex expression as a sticky subject.",
            "A sticky subject must be a simple variable, property, or "
            "subscript (e.g., 'player' or 'player's health').");
    return NULL;
  }
}

static Node *stickyPrefix() {
  if (currentStickySubject == NULL) {
    errorAt(&parser.previous, ERR_SYNTAX,
            "This operator is missing its left side.",
            "It looks like you used an operator (like '<', '>=', or 'is') "
            "without providing a value on its left, and there is no active "
            "subject to attach it to.");
    return NULL;
  }

  Token opToken = parser.previous;

  // --- THE "IS NOT" FIX ---
  bool invert = false;
  if ((opToken.type == TOKEN_IS) && match(TOKEN_NOT)) {
    invert = true;
  }

  ParseRule *rule = getRule(opToken.type);
  Node *right = parsePrecedence((Precedence)(rule->precedence + 1));

  // Build the binary node using the cloned subject!
  Node *stickyNode = newBinaryNode(cloneNode(currentStickySubject), opToken,
                                   right, opToken.line);

  if (invert) {
    Token notToken = {TOKEN_NOT, "not", 3, opToken.line, 0};
    return newUnaryNode(notToken, stickyNode, opToken.line);
  }

  return stickyNode;
}

static bool isComparison(Token opToken) {

  switch (opToken.type) {
  case TOKEN_IS:
  case TOKEN_EQUAL_EQUAL:
  case TOKEN_LESS_EQUAL:
  case TOKEN_LESS:
  case TOKEN_GREATER_EQUAL:
  case TOKEN_GREATER:
  case TOKEN_EQUAL:
    return true;

  default:
    return false;
  }
}

static Node *castExpression(Node *left) {
  int line = parser.previous.line;
  Node *right = parsePrecedence(PREC_CAST + 1);
  return newCastNode(left, right, line);
}

static Node *binary(Node *left) {
  Token opToken = parser.previous;

  // --- STICKY SUBJECT CAPTURE ---
  if (isComparison(opToken)) {
    currentStickySubject = left;
  }

  // --- THE "IS NOT" FIX ---
  bool invert = false;
  if ((opToken.type == TOKEN_IS) && match(TOKEN_NOT)) {
    invert = true;
  }

  ParseRule *rule = getRule(opToken.type);
  Node *right = parsePrecedence((Precedence)(rule->precedence + 1));
  Node *binNode = newBinaryNode(left, opToken, right, opToken.line);

  // If we caught a 'not', wrap the whole binary expression!
  if (invert) {
    Token notToken = {TOKEN_NOT, "not", 3, opToken.line, 0};
    return newUnaryNode(notToken, binNode, opToken.line);
  }

  return binNode;
}

static Node *and_(Node *left) {
  Token opToken = parser.previous;
  Node *right = parsePrecedence(PREC_AND);
  return newLogicalNode(left, opToken, right, opToken.line);
}

static Node *or_(Node *left) {
  Token opToken = parser.previous;
  Node *right = parsePrecedence(PREC_OR);
  return newLogicalNode(left, opToken, right, opToken.line);
}

static Node *block(TokenType *terminators, int count);
static Node *listComprehension(int line) {
  advance(); // Consume the 'for'
  if (check(TOKEN_EACH))
    advance();

  consumeHint(TOKEN_IDENTIFIER, ERR_SYNTAX,
              "I was expecting a variable name here.",
              "Provide a name for your loop iterator.");
  Token iterator = parser.previous;

  Token indexVar;
  bool hasIndex = false;
  if (match(TOKEN_COMMA)) {
    consumeHint(TOKEN_IDENTIFIER, ERR_SYNTAX,
                "I was expecting an index variable name.",
                "Provide a name for the index variable after the comma.");
    indexVar = parser.previous;
    hasIndex = true;
  }

  if (check(TOKEN_IN))
    advance();
  else if (check(TOKEN_FROM))
    advance();

  Node *sequence = expression();

  bool isBlockMode = false;
  Node *keepValue = NULL;
  Node *body = NULL;

  // The Dual-Mode Switch!
  if (match(TOKEN_KEEP)) {
    Node *expr = expression();

    // --- AST INVERSION FIX ---
    if (expr != NULL && expr->type == NODE_IF &&
        expr->as.ifStmt.elseBranch == NULL) {
      Node *cond = expr->as.ifStmt.condition;
      Node *inner = expr->as.ifStmt.thenBranch;

      Node *keepNode = newKeepNode(NULL, inner, line);
      FREE(Node, expr); // Prevent the memory leak!
      keepValue = newIfNode(cond, keepNode, NULL, line);
    } else {
      keepValue = newKeepNode(NULL, expr, line);
    }
  } else if (match(TOKEN_COLON)) {
    isBlockMode = true;
    Token blockOpener = parser.previous;   // <--- Capture the colon
    TokenType terminators[] = {TOKEN_END}; // <--- Stop at 'end'!
    body = block(terminators, 1);
    consumeBlockEnd(blockOpener,
                    "list comprehension"); // <--- Safely eat the 'end'
  } else {
    errorAt(
        &parser.current, ERR_SYNTAX,
        "I was expecting 'keep' or a colon ':' here.",
        "Comprehensions must specify what to keep, or open a block with ':'.");
  }

  ignoreNewlines();
  consumeHint(TOKEN_RIGHT_BRACKET, ERR_SYNTAX,
              "I couldn't find the closing bracket ']'.",
              "Close your list comprehension.");

  return newComprehensionNode(iterator, indexVar, hasIndex, sequence,
                              isBlockMode, keepValue, NULL, body, false, line);
}

static Node *dictComprehension(int line) {
  advance(); // Consume the 'for'
  if (check(TOKEN_EACH))
    advance();

  consumeHint(TOKEN_IDENTIFIER, ERR_SYNTAX,
              "I was expecting a variable name here.",
              "Provide a name for your loop iterator.");
  Token iterator = parser.previous;

  Token indexVar;
  bool hasIndex = false;
  if (match(TOKEN_COMMA)) {
    consumeHint(TOKEN_IDENTIFIER, ERR_SYNTAX,
                "I was expecting an index variable name.",
                "Provide a name for the index variable after the comma.");
    indexVar = parser.previous;
    hasIndex = true;
  }

  if (check(TOKEN_IN))
    advance();
  else if (check(TOKEN_FROM))
    advance();

  Node *sequence = expression();

  bool isBlockMode = false;
  Node *keepKey = NULL;
  Node *keepValue = NULL;
  Node *body = NULL;

  if (match(TOKEN_KEEP)) {
    Node *parsedKey = expression();
    consumeHint(TOKEN_COLON, ERR_SYNTAX, "I was expecting a colon ':' here.",
                "Dictionary comprehensions require a key and a value separated "
                "by a colon (e.g., keep name : id).");
    Node *expr = expression();

    // --- AST INVERSION FIX ---
    if (expr != NULL && expr->type == NODE_IF &&
        expr->as.ifStmt.elseBranch == NULL) {
      Node *cond = expr->as.ifStmt.condition;
      Node *inner = expr->as.ifStmt.thenBranch;

      Node *keepNode = newKeepNode(parsedKey, inner, line);
      FREE(Node, expr); // Prevent the memory leak!
      keepValue = newIfNode(cond, keepNode, NULL, line);
    } else {
      keepValue = newKeepNode(parsedKey, expr, line);
    }
    // We leave keepKey as NULL since keepValue now holds the complete Keep
    // node!
  } else if (match(TOKEN_COLON)) {
    isBlockMode = true;
    Token blockOpener = parser.previous;   // <--- Capture the colon
    TokenType terminators[] = {TOKEN_END}; // <--- Stop at 'end'!
    body = block(terminators, 1);
    consumeBlockEnd(blockOpener,
                    "dictionary comprehension"); // <--- Safely eat the 'end'
  } else {
    errorAt(
        &parser.current, ERR_SYNTAX,
        "I was expecting 'keep' or a colon ':' here.",
        "Comprehensions must specify what to keep, or open a block with ':'.");
  }

  ignoreNewlines();
  consumeHint(TOKEN_RIGHT_BRACE, ERR_SYNTAX,
              "I couldn't find the closing brace '}'.",
              "Close your dictionary comprehension.");

  return newComprehensionNode(iterator, indexVar, hasIndex, sequence,
                              isBlockMode, keepValue, keepKey, body, true,
                              line);
}

static Node *list() {
  int line = parser.previous.line;
  ignoreNewlines();

  if (check(TOKEN_FOR))
    return listComprehension(line);

  NodeArray itemsArr, *items = &itemsArr;
  initNodeArray(items);

  groupingDepth++; // Protect the list items!
  if (!check(TOKEN_RIGHT_BRACKET)) {
    do {
      ignoreNewlines();
      if (check(TOKEN_RIGHT_BRACKET))
        break;
      writeNodeArray(items, expression());
    } while (match(TOKEN_COMMA));
  }
  groupingDepth--; // Coming back out!

  ignoreNewlines();
  consumeHint(TOKEN_RIGHT_BRACKET, ERR_SYNTAX,
              "I couldn't find the closing bracket ']' for this list.",
              "Make sure your list ends with ']' and that all items inside are "
              "separated by commas.");

  Node *node = newListNode(items->items, items->count, line);
  freeNodeArray(items);
  return node;
}

static Node *dict() {
  int line = parser.previous.line;
  ignoreNewlines();

  if (check(TOKEN_FOR))
    return dictComprehension(line);

  NodeArray keys;
  initNodeArray(&keys);

  NodeArray values;
  initNodeArray(&values);

  groupingDepth++; // Protect from blindfolds!

  if (!check(TOKEN_RIGHT_BRACE)) {
    do {
      ignoreNewlines();
      if (check(TOKEN_RIGHT_BRACE))
        break;

      // 1. Parse the Key (Force it to be a String Literal!)
      Node *keyNode = NULL;
      if (match(TOKEN_IDENTIFIER)) {
        // If they type `name:`, convert the bare identifier into the string
        // "name"
        ObjString *keyStr =
            copyString(parser.previous.start, parser.previous.length);
        keyNode = newLiteralNode(OBJ_VAL(keyStr), parser.previous.line);
      } else if (match(TOKEN_STRING)) {
        // If they type `"name":`, chop off the quotes normally
        ObjString *keyStr =
            copyString(parser.previous.start + 1, parser.previous.length - 2);
        keyNode = newLiteralNode(OBJ_VAL(keyStr), parser.previous.line);
      } else {
        errorAt(&parser.previous, ERR_SYNTAX,
                "I was expecting a property name for this dictionary item.",
                "Dictionary keys should be words or strings (e.g., 'name:' "
                "or '\"age\":').");
        break;
      }

      // 2. The Colon
      consumeHint(TOKEN_COLON, ERR_SYNTAX, "I was expecting a colon ':' here.",
                  "In dictionaries and blueprints, properties must be followed "
                  "by a colon (e.g., 'name: \"Munachi\"').");

      // 3. The Value
      Node *valueNode = expression();

      writeNodeArray(&keys, keyNode);
      writeNodeArray(&values, valueNode);
    } while (match(TOKEN_COMMA));
  }

  groupingDepth--; // Coming back out!

  ignoreNewlines();
  consumeHint(TOKEN_RIGHT_BRACE, ERR_SYNTAX,
              "I couldn't find the closing brace '}' for this dictionary.",
              "Make sure your dictionary ends with '}'.");

  Node *node = newDictNode(keys.items, values.items, keys.count, line);
  freeNodeArray(&keys);
  freeNodeArray(&values);
  return node;
}

static Node *parseInstantiate(Node *left, bool isWith) {
  int line = parser.previous.line;
  Token blockOpener = parser.previous;

  TokenArray propNames;
  initTokenArray(&propNames);
  NodeArray values;
  initNodeArray(&values);

  // Dynamically swap the terminator!
  TokenType terminator = isWith ? TOKEN_END : TOKEN_RIGHT_BRACE;

  if (!isWith)
    groupingDepth++; // Protect from blindfolds only for {}

  if (!check(terminator)) {
    do {
      ignoreNewlines();
      if (check(terminator))
        break; // Successfully handles trailing commas!

      // --- THE FIX ---
      consumeHint(
          TOKEN_IDENTIFIER, ERR_SYNTAX, "I was expecting a property name here.",
          isWith
              ? "When overriding properties, you need to list them explicitly."
              : "When instantiating a type, you need to list its properties "
                "(e.g., 'health: 100').");

      writeTokenArray(&propNames, parser.previous);
      // ---------------

      consumeHint(
          TOKEN_COLON, ERR_SYNTAX, "I was expecting a colon ':' here.",
          "Provide a colon after the property name to assign its value.");

      writeNodeArray(&values, expression());
    } while (match(TOKEN_COMMA));
  }

  if (!isWith)
    groupingDepth--;

  ignoreNewlines();

  if (isWith) {
    consumeBlockEnd(blockOpener, "'with' override");
  } else {
    consumeHint(TOKEN_RIGHT_BRACE, ERR_SYNTAX,
                "I couldn't find the closing brace '}' for this instance.",
                "Make sure your instance block ends with '}'.");
  }
